--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Lab3.2</string>
+    <string name="am_textViewText">Enter Your Name</string>
+    <string name="am_editViewText"> </string>
+    <string name="am_nextButtonText">Next</string>
 </resources>
